07/11/2023 TWAIN32_FIND implementation in 32bitServer; IPC_FindSource in Twain Taker
08/11/2023 Captured Images Icon of Image not Found; First Release Full Test
10/11/2023 Retry for Scanner not Found; Refresh in TwainSelectSource
15/11/2023 MSG_TWAIN32_USERINTERFACE in 32bit Server; Animation in Acquire; Test cleaned and renamed
29/11/2023 Twain First Tests with PaperSizes and Resolution
01/12/2023 Settings on Twain (PaperFeed,Size,Resolution); TWAIN32_OPEN Select the Source
06/12/2023 Twain Params use of TTwainParams record; TTwainParamsCapabilities record;
11/12/2023 TwainSetting PixelType, use of TTwainParamsCapabilities record;
           First write of TWAIN32_PARAMS_SET/GET TWAIN32_PREVIEW
12/12/2023 Twain SettingForm use only TTwainParamsCapabilities; 32bit server set Capabilities,TWAIN32_PARAMS_GET;
           TwainTaker use IPC_ParamsSet/Get,IPC_Preview
14/12/2023 SelectForm Select current Scanner;
           Changed Extended to Single (for platform compatibility and for my actual state);
           32bit Server Result for internalTake;
           Test use ttmNative mode (MUST be used in Main app)
19/12/2023 32bit Server switched to ttmNative TransferMode; Test added TwainAcquireNative or Acquire with TBitmap
20/12/2023 Twain switched to ttmNative; TDigIt_Taker use Variant+TDigIt_TakerResultType;
           32bit Server use new TwainAcquireNative;

06/06/2024 Added Use of MaxM_Commons Package and MM_SyncIPC in it; 
           Changed Use of Package ExpandPanels with BCExpandPanelses
07/06/2024 Added Button TimerTake to MainForm

12/06/2024 First Tests to Switch Bridge to Interfaces
26/06/2024 Switch to Interface use in Bridge, Taker, etc;
           Temporarily removed Taker Twain until it is converted to interfaces;
           First test of Load Plugins from Library;
27/06/2024 Changed IDigIt_Params.Summary params list; Added Flags in Plugin/Taker; Added function AllocPChar