@@ -54,6 +54,8 @@ type
     function Load(const xml_File: PChar; const xml_RootPath: PChar): Boolean; stdcall;
     function Save(const xml_File: PChar; const xml_RootPath: PChar): Boolean; stdcall;
     function Summary(const ASummary: PChar): Integer; stdcall;
+
+    function OnSet: Boolean; stdcall;
   end;
 
   IDigIt_Taker = Interface
